fix: Wrap form container outside Antd classes

--- a/src/layouts/Account/OverrideAntd.scss
+++ b/src/layouts/Account/OverrideAntd.scss
@@ -1,9 +1,11 @@
-.ant-form-item {
-    margin-bottom: 8px;
-    input {
-        height: 40px;
+.account-layout-container {
+    *[class^='ant-'] {
+        font-family: $font-inter;
     }
-    &-label {
-        padding-bottom: 4px !important;
+    .ant-form-item {
+        margin-bottom: 8px;
+        input {
+            height: 40px;
+        }
     }
 }
